
  - Support Import('*') to import everything that's been Export()ed.

  - Fix an undefined exitvalmap on Win32 systems.

  - Support new SetOption() and GetOption() functions for setting
    various command-line options from with an SConscript file.

  - Deprecate the old SetJobs() and GetJobs() functions in favor of
    using the new generic {Set,Get}Option() functions.

  From David Snopek:

  - Contribute the "Autoscons" code for Autoconf-like checking for
    the existence of libraries, header files and the like.

  From Greg Spencer:

  - Support the C preprocessor #import statement.

  - Allow the SharedLibrary() Builder on Win32 systems to be able to
    register a newly-built dll using regsvr32.

  - Add a Builder for Windows type library (.tlb) files from IDL files.

  - Add an IDL scanner.

  - Refactor the Fortran, C and IDL scanners to share common logic.

  - Add .srcpath and .srcdir attributes to $TARGET and $SOURCE.

  From Christoph Wiedemann:

  - Integrate David Snopek's "Autoscons" code as the new SConf
    configuration subsystem, including caching of values between
    runs (using normal SCons dependency mechanisms), tests, and
    documentation.



RELEASE 0.13 - Mon, 31 Mar 2003 20:22:00 -0600

  From Charles Crain:

  - Fix a bug when BuildDir(duplicate=0) is used and SConscript
    files are called from within other SConscript files.

  - Support (older) versions of Perforce which don't set the Windows
    registry.



RELEASE 0.12 - Thu, 27 Mar 2003 23:52:09 -0600

  From Charles Crain:

  - Added support for the Perforce source code management system.

  - Fix str(Node.FS) so that it returns a path relative to the calling
    SConscript file's directory, not the top-level directory.

  - Added support for a separate src_dir argument to SConscript()
    that allows explicit specification of where the source files
    for an SConscript file can be found.

  - Support more easily re-usable flavors of command generators by