@@ -98,6 +98,9 @@ RELEASE 0.14 - XXX
   - Deprecate the old SetJobs() and GetJobs() functions in favor of
     using the new generic {Set,Get}Option() functions.
 
+  - Fix a number of tests that searched for a Fortran compiler using the
+    external PATH instead of what SCons would use.
+
   From David Snopek:
 
   - Contribute the "Autoscons" code for Autoconf-like checking for
